# gitlab-nexus-cpp-conan-cmake-containers-demo-libfibonacci

./: .gitlab-ci.yml  CMakeLists.txt  README.md  build.sh  conanfile.py  create-package.sh  get-version.sh  push-all.sh  run-coverage.sh  upload-package.sh
.devcontainer/: Dockerfile  devcontainer.json
include/: fibonacci.hpp
src/: fibonacci.cpp
test/: fibonacci_tests.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: fibonacci_test.cpp
